# BitmapTrieSearch

./: .gitignore  Cargo.toml  README.md
examples/csv/: Cargo.toml  README.md
examples/csv/frontend/: package-lock.json
examples/csv/frontend/booksearch/: components.json  index.html  package-lock.json  package.json
examples/csv/frontend/booksearch/src/: App.css  App.tsx  index.css
examples/csv/frontend/booksearch/src/api/: get.ts  search.ts
examples/csv/frontend/booksearch/src/components/ui/: autocomplete.tsx
examples/csv/frontend/booksearch/src/types/: search.ts
examples/csv/src/: lib.rs  main.rs
examples/net/: Cargo.toml  README.md
examples/net/src/: access.rs  command.rs  lib.rs  listener.rs
src/: access.rs  command.rs  constants.rs  encoding.rs  lib.rs  listener.rs  main.rs  trie.rs
src/dictionary/: mod.rs
src/trie/: entry.rs  mod.rs  test.rs
